--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,127 @@
 <!DOCTYPE html>
-<html lang="es">
+<html data-bs-theme="light" lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ZYGO - Transporte Unificado</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>ZYGO</title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
+
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap">
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.min.css') }}">
 </head>
 <body>
- <div class="container sidebar-hidden" id="container">
-    <aside class="sidebar" id="sidebar">
-      <div class="logo">
-        <img src="{{ url_for('static', filename='logo.png') }}" alt="ZYGO Logo" />
-        <h2>ZYGO</h2>
-      </div>
-      <nav>
-        <ul>
-          <li onclick="mostrarSeccion('home')">Inicio</li>
-          <li onclick="mostrarSeccion('mapa')">Mapa</li>
-          <li onclick="mostrarSeccion('configuracion')">Configuración</li>
-          <li onclick="mostrarSeccion('cuenta')">Mi Cuenta</li>
-          <li onclick="mostrarSeccion('centro')">Centro ZYGO</li>
-        </ul>
-      </nav>
-    </aside>
+    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><img class="img-fluid" width="3000" height="3000" src="assets/img/horizontal%20blanco.png" style="margin: 3px;height: 80px;width: 85px;transform: translateX(21px) scale(1.79);"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-5">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="#zygo" style="color: rgba(255,255,255,0.55);" data-bs-toggle="modal">¿Que es Zygo?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#team" data-bs-toggle="modal">Equipo Zygo</a></li>
+                    <li class="nav-item" href="Login.html"><a class="nav-link" href="Login.html" style="color: rgb(255,255,255);">Iniciar sesión</a></li>
+                </ul><a class="btn btn-primary ms-md-2" role="button" href="Login.html" style="background: rgb(255,255,255);border-style: none;"><span style="color: rgb(0, 0, 0);">Registrarse</span></a>
+            </div>
+        </div>
+    </nav>
+    <section>
+        <div data-bss-parallax-bg="true" style="height: 600px;filter: grayscale(40%);background: url(&quot;assets/img/photo-1569646774001-8b756c0c87f8.jpg&quot;) center / cover;">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
+                        <div style="max-width: 350px;width: 387px;height: 156px;">
+                            <h1 class="text-uppercase fw-bold" style="text-align: left;font-family: &quot;Montserrat&quot;,&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;position: relative;transform: translateY(-158px);overflow: clip;display: flex;font-size: 40px;"><span style="color: rgb(255, 255, 255);">Paga simple, muevete libre</span></h1><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-size: 25px;background: rgb(63,75,92);border-radius: 13px;padding: 12px 16px;transform: translateY(-107px);border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-google-play">
+                                    <path d="M14.222 9.374c1.037-.61 1.037-2.137 0-2.748L11.528 5.04 8.32 8l3.207 2.96 2.694-1.586Zm-3.595 2.116L7.583 8.68 1.03 14.73c.201 1.029 1.36 1.61 2.303 1.055l7.294-4.295M1 13.396V2.603L6.846 8zM1.03 1.27l6.553 6.05 3.044-2.81L3.333.215C2.39-.341 1.231.24 1.03 1.27Z"></path>
+                                </svg>&nbsp;Descargar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="modal fade" role="dialog" tabindex="-1" id="zygo" style="transform: translateY(148px);">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="container" style="background: #ffffff;">
+                    <div class="row" style="background: #ffffff;">
+                        <div class="col-12" style="height: 314px;">
+                            <div class="modal-body">
+                                <p style="font-size: 27px;text-align: center;font-weight: bold;">¿QUE ES ZYGO?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade mb-0 pb-0" role="dialog" tabindex="-1" id="team" style="transform: translateY(148px);height: 360px;">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="container" style="background: #ffffff;">
+                    <div class="row" style="background: #ffffff;">
+                        <div class="col-12" style="height: 314px;">
+                            <div class="modal-body">
+                                <p style="font-size: 27px;text-align: center;font-weight: bold;">Equipo Zygo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container py-4 py-xl-5" style="position: relative;transform: translateY(-286px);">
+                    <div class="row gy-4 row-cols-2 row-cols-md-4">
+                        <div class="col offset-3 offset-xxl-2">
+                            <div class="card border-0 shadow-none">
+                                <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle object-fit-cover mb-3" width="130" height="130" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZkRwIsgH7WuZ9C9D4DmRchBooZAwRlFW9jiX1AUsfwbp6a-vD4JpwhFvgMoN0wKUz7zg&amp;usqp=CAU">
+                                    <h5 class="fw-bold text-primary mb-0 card-title"><span style="color: rgb(0, 0, 0);">Fabian Torres</span></h5>
+                                    <p class="text-muted mb-2 card-text">Primate</p>
+                                    <ul class="list-inline fs-6 text-muted w-100 mb-0 social-buttons">
+                                        <li class="list-inline-item text-center"><a href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;to=fabianpuntotorres@gmail.com&amp;su=Consulta%20r%C3%A1pida&amp;body=Hola%20buenas%20mi%20consulta%20es" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;to=gamerash524@gmail.com&amp;su=Consulta%20r%C3%A1pida&amp;body=Hola%20buenas%20mi%20consulta%20es" style="color: rgba(33,37,41,0.75);">
 
-    <main class="contenido" id="contenido">
-      <section id="home" class="seccion activa">
-        <h1>Bienvenido a ZYGO</h1>
-        <p>Tu cuenta de transporte unificada</p>
-      </section>
+                                                    <path d="M2.00333 5.88355L9.99995 9.88186L17.9967 5.8835C17.9363 4.83315 17.0655 4 16 4H4C2.93452 4 2.06363 4.83318 2.00333 5.88355Z" fill="currentColor"></path>
+                                                    <path d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z" fill="currentColor"></path>
+                                                </svg></a></li>
+                                        <li class="list-inline-item text-center"><a href="https://discord.com/users/629068635432026112" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="color: rgba(33,37,41,0.75);">
+                                                    <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"></path>
+                                                </svg></a></li>
+                                        <li class="list-inline-item text-center"><a href="https://www.instagram.com/gtrmafla/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram" style="color: rgba(33,37,41,0.75);">
+                                                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"></path>
+                                                </svg></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xxl-3 offset-3 offset-xxl-2">
+                            <div class="card border-0 shadow-none">
+                                <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle object-fit-cover mb-3" width="130" height="130" src="https://images3.memedroid.com/images/UPLOADED492/66ed83c79ad3d.jpeg">
+                                    <h5 class="fw-bold text-primary mb-0 card-title"><span style="color: rgb(0, 0, 0);">Fernando Quilaqueo</span></h5>
+                                    <p class="text-muted mb-2 card-text">Causa</p>
+                                    <ul class="list-inline fs-6 text-muted w-100 mb-0 social-buttons">
+                                        <li class="list-inline-item text-center"><a href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;to=gamerash524@gmail.com&amp;su=Consulta%20r%C3%A1pida&amp;body=Hola%20buenas%20mi%20consulta%20es" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;to=gamerash524@gmail.com&amp;su=Consulta%20r%C3%A1pida&amp;body=Hola%20buenas%20mi%20consulta%20es" style="color: rgba(33,37,41,0.75);">
 
-<section id="mapa" class="seccion">
-  <h2>Mapa de Transporte</h2>
-  <div id="mapaZYGO"></div>
-</section>
-        <script async
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHDuCEcdrais4VzNAVuCgszlLS5_AgzNE&callback=inicializarMapa">
-</script>
+                                                    <path d="M2.00333 5.88355L9.99995 9.88186L17.9967 5.8835C17.9363 4.83315 17.0655 4 16 4H4C2.93452 4 2.06363 4.83318 2.00333 5.88355Z" fill="currentColor"></path>
+                                                    <path d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z" fill="currentColor"></path>
+                                                </svg></a></li>
+                                        <li class="list-inline-item text-center"><a href="https://discord.com/users/608360766512300032" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="color: rgba(33,37,41,0.75);">
+                                                    <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"></path>
+                                                </svg></a></li>
+                                        <li class="list-inline-item text-center"><a href="https://www.instagram.com/guaygod/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram" style="color: rgba(33,37,41,0.75);">
+                                                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"></path>
+                                                </svg></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  <!-- Bootstrap JS -->
+  <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 
-      </section>
-
-      <section id="configuracion" class="seccion">
-        <h2>Configuración</h2>
-        <p>Preferencias de usuario y ajustes.</p>
-      </section>
-
-      <section id="cuenta" class="seccion">
-        <h2>Mi Cuenta</h2>
-        <div id="saldo">$0</div>
-        <button class="btn" onclick="recargarSaldo()">Recargar</button>
-      </section>
-
-      <section id="centro" class="seccion">
-        <h2>Centro ZYGO</h2>
-        <p>Accede al sistema de cargas y gestión de pasajes.</p>
-        <button class="btn" onclick="comprar('Metro')">Comprar Metro</button>
-        <button class="btn" onclick="comprar('Red Bus')">Comprar Red Bus</button>
-        <button class="btn" onclick="comprar('EFE')">Comprar EFE</button>
-      </section>
-    </main>
-  </div>
-
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <!-- Custom Script -->
+  <script src="{{ url_for('static', filename='js/script.min.js') }}"></script>
 </body>
 </html>
