--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><img class="img-fluid" width="3000" height="3000" src="assets/img/horizontal%20blanco.png" style="margin: 3px;height: 80px;width: 85px;transform: translateX(21px) scale(1.79);"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><img class="img-fluid" width="3000" height="3000" src="static/img/horizontal%20blanco.png" style="margin: 3px;height: 80px;width: 85px;transform: translateX(21px) scale(1.79);"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#zygo" style="color: rgba(255,255,255,0.55);" data-bs-toggle="modal">¿Que es Zygo?</a></li>
@@ -28,7 +28,7 @@
         </div>
     </nav>
     <section>
-        <div data-bss-parallax-bg="true" style="height: 600px;filter: grayscale(40%);background: url(&quot;assets/img/photo-1569646774001-8b756c0c87f8.jpg&quot;) center / cover;">
+        <div data-bss-parallax-bg="true" style="height: 600px;filter: grayscale(40%);background: url(&quot;static/img/photo-1569646774001-8b756c0c87f8.jpg&quot;) center / cover;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
